// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIRadio should be a small variant, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-small"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
    role="presentation"
  >
    <input
      aria-labelledby="testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-small"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small"
      id="testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should be a xsmall variant, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-xsmall"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
    role="presentation"
  >
    <input
      aria-labelledby="testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-xsmall"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-xsmall"
      id="testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should have a hidden label, if specified 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
    role="presentation"
  >
    <input
      aria-label="Hidden label"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
</div>
`;

exports[`XUIRadio should have label text if provided 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
    role="presentation"
  >
    <input
      aria-labelledby="testRadioId"
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-styledcheckboxradio--radio xui-styledcheckboxradio--radio-medium"
    >
      <div
        className="xui-touchtarget"
      />
    </div>
    <span
      className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-medium"
      id="testRadioId"
    >
      Howdy, folks!
    </span>
  </label>
</div>
`;

exports[`XUIRadio should render with an icon when one is provided 1`] = `
<div
  className="xui-styledcheckboxradiowrapper xui-styledcheckboxradio-medium"
>
  <label
    className="xui-styledcheckboxradio"
    onClick={[Function]}
    role="presentation"
  >
    <input
      className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-medium"
      defaultChecked={false}
      disabled={false}
      onChange={[Function]}
      required={false}
      role="radio"
      type="radio"
    />
    <div
      className="xui-iconwrapper"
    >
      <svg
        className="xui-icon"
        height={15}
        viewBox="0 0 15 15"
        width={15}
      >
        <path
          className="xui-styledcheckboxradio--focus"
          d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
          role="presentation"
        />
        <path
          className="xui-styledcheckboxradio--main"
          d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
          role="presentation"
        />
      </svg>
      <div
        className="xui-touchtarget"
      />
    </div>
  </label>
</div>
`;
